scss vite paths config
tsconfig

--- a/web/src/assets/scss/main.scss
+++ b/web/src/assets/scss/main.scss
@@ -1,5 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import "colors";
 
 body {
   margin: 0;
+  font-family: "Roboto";
+}
+.app {
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
 }
