--- a/web/src/assets/scss/main.scss
+++ b/web/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-@import "colors";
+@import "@colors";
 
 body {
   margin: 0;
@@ -9,4 +9,8 @@ body {
   display: flex;
   flex-direction: row;
   min-height: 100vh;
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
