--- a/web/src/assets/scss/_colors.scss
+++ b/web/src/assets/scss/_colors.scss
@@ -1,3 +1,4 @@
+//ASSORTED
 $pink100: #ff9ff3;
 $pink200: #f368e0;
 $aqua100: #00d2d3;
@@ -18,3 +19,9 @@ $grey300: #576574;
 $grey400: #222f3e;
 $green100: #1dd1a1;
 $green200: #10ac84;
+
+// MAIN COLORS
+$dark200: #222831;
+$dark100: #393e46;
+$primary: #00adb5;
+$grey50: #eeeeee;
