--- a/web/src/components/SideHeader/styles.scss
+++ b/web/src/components/SideHeader/styles.scss
@@ -13,10 +13,15 @@
   height: 0.1rem;
   background-color: $grey200;
   bottom: 0;
+  border-radius: 3rem;
+}
+.icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $primary;
+  border-radius: 100%;
 }
 .side-header-icon {
-  background-color: $primary;
   color: white;
-  border-radius: 2rem;
-  padding: 1rem;
 }
