--- a/web/src/assets/scss/main.scss
+++ b/web/src/assets/scss/main.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import "@colors";
-
+@import "variables";
 body {
   margin: 0;
   font-family: "Roboto";
