--- a/web/src/containers/MessageContainer/styles.scss
+++ b/web/src/containers/MessageContainer/styles.scss
@@ -1,6 +1,9 @@
 @import "@colors";
 
 .message-container {
+  display: flex;
   flex: 1;
-  background-color: $dark100;
+}
+.message-wrapper {
+  flex: 1;
 }
