--- a/web/src/components/ChatItem/styles.scss
+++ b/web/src/components/ChatItem/styles.scss
@@ -2,9 +2,19 @@
 .chat-item {
   display: flex;
   align-items: center;
-  justify-content: center;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 0.8rem;
   img {
     object-fit: cover;
-    border-radius: 0.8rem;
+    border-radius: 100%;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: $grey300;
+  }
+  a {
+    background-color: $cyan200;
   }
 }
