--- a/web/src/components/MessageHeader/styles.scss
+++ b/web/src/components/MessageHeader/styles.scss
@@ -2,4 +2,55 @@
 .message-header {
   background-color: $grey50;
   flex: 1.5;
+  display: flex;
+  padding: 0 1rem;
+}
+.message-header-left {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  height: 100%;
+  img {
+    object-fit: cover;
+    border-radius: 0.8rem;
+  }
+}
+.message-header-right {
+  margin-left: auto;
+  height: 100%;
+  gap: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.message-header-details-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+  width: inherit;
+  overflow-wrap: break-word;
+  h1 {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 1.3rem;
+  }
+  p {
+    font-size: 0.8rem;
+    color: $grey300;
+  }
+}
+.status {
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
+}
+.online-circle {
+  width: 0.6rem;
+  height: 0.6rem;
+  border-radius: 100%;
+  background-color: $green100;
+}
+.header-icon {
+  color: $primary;
 }
