--- a/web/src/components/SideHeader/styles.scss
+++ b/web/src/components/SideHeader/styles.scss
@@ -2,17 +2,16 @@
 .side-header {
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
   padding: 0.8rem;
 }
 .side-header::after {
   content: "";
   position: absolute;
-  width: 3.5rem;
+  width: 80%;
   height: 0.1rem;
   background-color: $grey100;
   bottom: 0;
+  left: 2rem;
   border-radius: 3rem;
 }
 .icon-container {
