--- a/web/src/containers/ChatList/styles.scss
+++ b/web/src/containers/ChatList/styles.scss
@@ -3,5 +3,22 @@
   padding: 0.8rem;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 0.05rem;
+  max-height: 100%;
+  overflow: hidden;
+}
+.chat-list:hover {
+  overflow-y: scroll;
+}
+.chat-list::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.chat-list::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px $dark200;
+}
+
+.chat-list::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 1rem;
 }
