--- a/web/src/components/MessageHeader/styles.scss
+++ b/web/src/components/MessageHeader/styles.scss
@@ -12,7 +12,7 @@
   height: 100%;
   img {
     object-fit: cover;
-    border-radius: 0.8rem;
+    border-radius: 100%;
   }
 }
 .message-header-right {
