message header ui changes

--- a/web/src/components/MessageHeader/styles.scss
+++ b/web/src/components/MessageHeader/styles.scss
@@ -1,7 +1,8 @@
 @import "@colors";
 .message-header {
-  background-color: $grey50;
-  flex: 1.5;
+  background-color: white;
+  border-bottom: 1px solid $grey100;
+  flex: 1;
   display: flex;
   padding: 0 1rem;
 }
@@ -25,8 +26,8 @@
 }
 .message-header-details-container {
   display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
+  flex-direction: row;
+  gap: 0.5rem;
   width: inherit;
   overflow-wrap: break-word;
   h1 {
@@ -42,7 +43,6 @@
 }
 .status {
   display: flex;
-  gap: 0.3rem;
   align-items: center;
 }
 .online-circle {
