--- a/web/src/components/SearchBar/styles.scss
+++ b/web/src/components/SearchBar/styles.scss
@@ -17,8 +17,7 @@
 }
 .search-bar-input::placeholder {
   color: $grey300;
-  font-family: "Roboto";
-  letter-spacing: 0.01rem;
+  font-family: "Poppins";
 }
 .search-bar-icon {
   position: absolute;
