--- a/web/src/components/MessageInputBar/styles.scss
+++ b/web/src/components/MessageInputBar/styles.scss
@@ -1,31 +1,23 @@
 @import "@colors";
 .message-input-container {
-  width: 100%;
-  align-self: center;
-  flex: 1.2;
   display: flex;
-  justify-content: center;
+  padding: 0.5rem;
 }
-.message-input-box {
-  border-radius: 0.5rem;
-  border: 1px solid grey;
-  padding: 0.5rem 1rem;
+.message-composer {
+  flex: 3;
   display: flex;
-  width: 95%;
-  max-height: 10rem;
-  margin-bottom: 1rem;
-  flex-direction: row;
-}
-
-.message-tabs {
-  margin-right: 0.5rem;
-  display: flex;
-}
-.message-textarea {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  .message-input {
+  margin: 0 0.5rem;
+  .textareaAutosize {
     flex: 1;
+    background-color: $grey50;
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
   }
+}
+.message-actions {
+  align-self: flex-end;
+  gap: 0.5rem;
+  display: flex;
+  padding-bottom: 0.4rem;
+  color: $blue200;
 }
